--- a/Testy/CodeFirst MigratWithExistDB/CodeFirstMigratWithExistDB.csproj
+++ b/Testy/CodeFirst MigratWithExistDB/CodeFirstMigratWithExistDB.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{76033C4F-CF49-49C5-9667-5D1CC28BA586}</ProjectGuid>
+    <ProjectGuid>{5E9026AA-8D42-4246-BE0D-2C3332E781B0}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_01_CodeFirstExistingDatabaseSample</RootNamespace>
-    <AssemblyName>01_CodeFirstExistingDatabaseSample</AssemblyName>
+    <RootNamespace>CodeFirst_MigratWithExistDB</RootNamespace>
+    <AssemblyName>CodeFirst MigratWithExistDB</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -50,16 +50,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Blog.cs" />
-    <Compile Include="BloggingContext.cs" />
+    <Compile Include="G5ADR.cs" />
+    <Compile Include="G5DOK.cs" />
+    <Compile Include="G5RCBUD.cs" />
+    <Compile Include="G5RCDZE.cs" />
+    <Compile Include="G5RCLKL.cs" />
+    <Compile Include="G5RCNIER.cs" />
+    <Compile Include="G5RCOBC.cs" />
+    <Compile Include="G5RCW.cs" />
+    <Compile Include="Migrations\201407281104028_initial.cs" />
+    <Compile Include="Migrations\201407281104028_initial.Designer.cs">
+      <DependentUpon>201407281104028_initial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Post.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SWDEContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201407281104028_initial.resx">
+      <DependentUpon>201407281104028_initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
