--- a/Testy/School/School.csproj
+++ b/Testy/School/School.csproj
@@ -47,7 +47,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
+    <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -66,6 +66,7 @@
     <Compile Include="Course.cs">
       <DependentUpon>School.tt</DependentUpon>
     </Compile>
+    <Compile Include="CPokaz.cs" />
     <Compile Include="GetCoursesByStudentId_Result.cs">
       <DependentUpon>School.tt</DependentUpon>
     </Compile>
